--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
         android:persistent="true"
-        >
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,8 +17,17 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".RogueService"
-            />
+        <service android:name=".service.RogueService" />
+        <service android:name=".service.DameonService" />
+
+        <service
+            android:name=".service.LocalService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".service.RomoteService"
+            android:enabled="true"
+            android:exported="true"/>
     </application>
 
 </manifest>
