--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,10 @@
 
         <service
             android:name=".service.LocalService"
-            android:enabled="true"
-            android:exported="true" />
+             />
         <service
             android:name=".service.RomoteService"
-            android:process=":romote"
-            android:enabled="true"
-            android:exported="true"/>
+            android:process=":romote"/>
 
 
         <service android:name=".service.GrayService"/>
